回家继续做

--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="email=no">
+    <link rel="stylesheet" href="http://icono-49d6.kxcdn.com/icono.min.css">
     <title>Title</title>
 </head>
 <body>
